fixed the issues with the 2D-3D possibilities

--- a/source/example_4_2.ipynb
+++ b/source/example_4_2.ipynb
@@ -6,17 +6,19 @@
    "source": [
     "# Chapter 4, Example 4.2\n",
     "\n",
-    "The excercise deals with a 2D truss; to make things more general, the code is written to handle 3D elements as well. This truss can be computed as a 2D, for which\n",
-    "- the node coordinates must be in the XY plane: omit the Z coordinate,\n",
-    "- set the supports to match it, i.e. remove the 'z' direction supports."
+    "The excercise deals with a 2D truss; to make things more general, the code is written to handle 3D elements as well. This truss can be computed as a 2D one, for which:\n",
+    "- the node coordinates must be in a 2D plane, i.e. the z-coordinates must be zero,\n",
+    "- set the supports to match the dimensionality.\n",
+    "\n",
+    "Set the dimensionality for **this** problem in the Geometry section."
    ],
    "id": "9cf298e1910e8bc9"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.261027Z",
-     "start_time": "2025-06-23T09:15:09.168043Z"
+     "end_time": "2025-06-23T10:11:34.655419Z",
+     "start_time": "2025-06-23T10:11:34.534438Z"
     }
    },
    "cell_type": "code",
@@ -44,15 +46,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.548248Z",
-     "start_time": "2025-06-23T09:15:09.540930Z"
+     "end_time": "2025-06-23T10:11:35.000003Z",
+     "start_time": "2025-06-23T10:11:34.990700Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "n1 = Node(0, 0, 0)\n",
-    "n2 = Node(1, 0, 0)\n",
-    "n3 = Node(0, 1, 0)\n",
+    "dimensionality = 3 # Set to 3 for a 3D truss, 2 for a 2D truss\n",
+    "\n",
+    "if dimensionality == 3:\n",
+    "    # 3D nodes\n",
+    "    n1 = Node(0, 0, 0)\n",
+    "    n2 = Node(1, 0, 0)\n",
+    "    n3 = Node(0, 1, 0)\n",
+    "elif dimensionality == 2:\n",
+    "    # 2D nodes\n",
+    "    n1 = Node(0, 0)\n",
+    "    n2 = Node(1, 0)\n",
+    "    n3 = Node(0, 1)\n",
+    "else:\n",
+    "    raise ValueError(\"Unsupported dimensionality. Use 2 or 3.\")\n",
     "\n",
     "A = 0.1  # Cross-sectional area\n",
     "E = 7e10  # Young's modulus\n",
@@ -79,21 +92,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.581579Z",
-     "start_time": "2025-06-23T09:15:09.573077Z"
+     "end_time": "2025-06-23T10:11:35.046785Z",
+     "start_time": "2025-06-23T10:11:35.034280Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# model\n",
+    "\n",
+    "supports_=((0, 'x'), (0, 'y'), (2, 'x'),)\n",
+    "if dimensionality == 3:\n",
+    "    supports_ += ((0, 'z'), (1, 'z'), (2, 'z'))\n",
+    "\n",
     "model = TrussModel(\n",
     "    nodes_=(n1, n2, n3),\n",
     "    elements_=((n1.ID, n2.ID, A, E, ro),\n",
     "               (n1.ID, n3.ID, A, E, ro),\n",
     "               (n2.ID, n3.ID, A, E, ro),),\n",
-    "    supports_=((0, 'x'), (0, 'y'), (2, 'x'),\n",
-    "               (0, 'z'), (1, 'z'), (2, 'z')\n",
-    "               ),\n",
+    "    supports_=supports_,\n",
     ")\n",
     "\n",
     "# loads\n",
@@ -127,14 +143,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.606074Z",
-     "start_time": "2025-06-23T09:15:09.596819Z"
+     "end_time": "2025-06-23T10:11:35.080608Z",
+     "start_time": "2025-06-23T10:11:35.073074Z"
     }
    },
    "cell_type": "code",
    "source": [
     "for _, node in model.nodes.items():\n",
-    "    print(f\"Node {node.ID}: x={node.x:.2f}, y={node.y:.2f}, z={node.z:.2f}\")"
+    "    print(f\"Node {node.ID}: coords:{node.coords}\")"
    ],
    "id": "639f7fd646642dae",
    "outputs": [
@@ -142,9 +158,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node 0: x=0.00, y=0.00, z=0.00\n",
-      "Node 1: x=1.00, y=0.00, z=0.00\n",
-      "Node 2: x=0.00, y=1.00, z=0.00\n"
+      "Node 0: coords:[0 0 0]\n",
+      "Node 1: coords:[1 0 0]\n",
+      "Node 2: coords:[0 1 0]\n"
      ]
     }
    ],
@@ -163,8 +179,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.718139Z",
-     "start_time": "2025-06-23T09:15:09.707362Z"
+     "end_time": "2025-06-23T10:11:35.144545Z",
+     "start_time": "2025-06-23T10:11:35.135153Z"
     }
    },
    "cell_type": "code",
@@ -204,8 +220,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.811558Z",
-     "start_time": "2025-06-23T09:15:09.801872Z"
+     "end_time": "2025-06-23T10:11:35.213401Z",
+     "start_time": "2025-06-23T10:11:35.199814Z"
     }
    },
    "cell_type": "code",
@@ -269,7 +285,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "### The global stiffness matrix\n",
+    "#### The global stiffness matrix\n",
     "\n",
     "First, without the supports, as assembled from the element stiffness matrices.\n",
     "\n",
@@ -280,8 +296,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.915820Z",
-     "start_time": "2025-06-23T09:15:09.900727Z"
+     "end_time": "2025-06-23T10:11:35.273170Z",
+     "start_time": "2025-06-23T10:11:35.259644Z"
     }
    },
    "cell_type": "code",
@@ -359,8 +375,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:09.997310Z",
-     "start_time": "2025-06-23T09:15:09.973775Z"
+     "end_time": "2025-06-23T10:11:35.338224Z",
+     "start_time": "2025-06-23T10:11:35.316174Z"
     }
    },
    "cell_type": "code",
@@ -371,7 +387,11 @@
     "print()\n",
     "print(\"Global displacements:\")\n",
     "for i, node in model.nodes.items():\n",
-    "    print(f\"Node {i}: u={U[i * model.ND]}, v={U[i * model.ND + 1]}, w={U[i * model.ND + 2]}\")\n",
+    "    if model.ND == 2:\n",
+    "        print(f\"Node {i}: u={U[i * model.ND]}, v={U[i * model.ND + 1]}\")\n",
+    "    else:\n",
+    "        # For 3D, we have an additional 'w' coordinate\n",
+    "        print(f\"Node {i}: u={U[i * model.ND]}, v={U[i * model.ND + 1]}, w={U[i * model.ND + 2]}\")\n",
     "\n",
     "# Calculate the member force using the local stiffness matrix\n",
     "print()\n",
@@ -427,8 +447,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T09:15:10.854762Z",
-     "start_time": "2025-06-23T09:15:10.051169Z"
+     "end_time": "2025-06-23T10:11:36.008762Z",
+     "start_time": "2025-06-23T10:11:35.364102Z"
     }
    },
    "cell_type": "code",
@@ -454,7 +474,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "<div id='475565a2-2e6e-4f63-8c44-7e5953579f06'></div>"
+       "<div id='22f0d372-0820-45df-b4a0-bc43555ae21b'></div>"
       ]
      },
      "metadata": {},
