--- a/source/notebooks/example_4_2.ipynb
+++ b/source/notebooks/example_4_2.ipynb
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:34.655419Z",
-     "start_time": "2025-06-23T10:11:34.534438Z"
+     "end_time": "2025-06-24T03:54:14.463873Z",
+     "start_time": "2025-06-24T03:54:14.367383Z"
     }
    },
    "cell_type": "code",
@@ -26,7 +26,7 @@
     "# imports\n",
     "import numpy as np\n",
     "from source.node import Node\n",
-    "from source.truss import TrussModel\n",
+    "from source.truss.truss import TrussModel\n",
     "np.set_printoptions(precision=3, suppress=False)"
    ],
    "id": "c5a68a42a5d4a32b",
@@ -46,8 +46,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:35.000003Z",
-     "start_time": "2025-06-23T10:11:34.990700Z"
+     "end_time": "2025-06-24T03:54:14.715902Z",
+     "start_time": "2025-06-24T03:54:14.709033Z"
     }
    },
    "cell_type": "code",
@@ -92,8 +92,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:35.046785Z",
-     "start_time": "2025-06-23T10:11:35.034280Z"
+     "end_time": "2025-06-24T03:54:14.754016Z",
+     "start_time": "2025-06-24T03:54:14.747295Z"
     }
    },
    "cell_type": "code",
@@ -143,8 +143,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:35.080608Z",
-     "start_time": "2025-06-23T10:11:35.073074Z"
+     "end_time": "2025-06-24T03:54:14.780617Z",
+     "start_time": "2025-06-24T03:54:14.773669Z"
     }
    },
    "cell_type": "code",
@@ -179,8 +179,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:35.144545Z",
-     "start_time": "2025-06-23T10:11:35.135153Z"
+     "end_time": "2025-06-24T03:54:14.816931Z",
+     "start_time": "2025-06-24T03:54:14.808828Z"
     }
    },
    "cell_type": "code",
@@ -220,8 +220,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:35.213401Z",
-     "start_time": "2025-06-23T10:11:35.199814Z"
+     "end_time": "2025-06-24T03:54:14.872099Z",
+     "start_time": "2025-06-24T03:54:14.862453Z"
     }
    },
    "cell_type": "code",
@@ -296,8 +296,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:35.273170Z",
-     "start_time": "2025-06-23T10:11:35.259644Z"
+     "end_time": "2025-06-24T03:54:14.916009Z",
+     "start_time": "2025-06-24T03:54:14.906729Z"
     }
    },
    "cell_type": "code",
@@ -375,8 +375,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:35.338224Z",
-     "start_time": "2025-06-23T10:11:35.316174Z"
+     "end_time": "2025-06-24T03:54:14.964703Z",
+     "start_time": "2025-06-24T03:54:14.954534Z"
     }
    },
    "cell_type": "code",
@@ -447,8 +447,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-23T10:11:36.008762Z",
-     "start_time": "2025-06-23T10:11:35.364102Z"
+     "end_time": "2025-06-24T03:54:15.468589Z",
+     "start_time": "2025-06-24T03:54:14.992992Z"
     }
    },
    "cell_type": "code",
@@ -474,7 +474,7 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "<div id='22f0d372-0820-45df-b4a0-bc43555ae21b'></div>"
+       "<div id='81245773-2faf-41ed-b608-10dca15745d1'></div>"
       ]
      },
      "metadata": {},
