--- a/source/notebooks/case_study_5_5.ipynb
+++ b/source/notebooks/case_study_5_5.ipynb
@@ -187,6 +187,26 @@
     }
    ],
    "execution_count": 21
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Assembling the global stiffness and mass matrices",
+   "id": "97f60ffe647c5310"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def assemble_K():\n",
+    "    pass\n",
+    "\n",
+    "def assemble_M():\n",
+    "    pass"
+   ],
+   "id": "158c701fb91be890"
   }
  ],
  "metadata": {
