--- a/source/notebooks/case_study_5_5.ipynb
+++ b/source/notebooks/case_study_5_5.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This case study uses the beam element introdced in Chapter 5 to model a micro-resonant transducer. The addition over the single-element derivation is that multiple beams are used, but since the geometry is still in the X-Y plane and the beams are not rotated, the only thing to do is to\n",
     "a) add more elements\n",
-    "b) assemble the global stiffness, and mass matrices utilizing the same techniques as in the case of the truss.\n",
+    "b) assemble the global stiffness, and mass matrices utilizing the same techniques as in Chapter 4, e.g. Example 4.2.\n",
     "\n",
     "Due to the simplicity of the problem there is no model object written, all the necessary methods are free-floating in the beam module, variables are defined in the notebook.\n"
    ],
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T04:10:34.945896Z",
-     "start_time": "2025-06-24T04:10:34.940368Z"
+     "end_time": "2025-06-24T06:04:46.919136Z",
+     "start_time": "2025-06-24T06:04:46.902399Z"
     }
    },
    "cell_type": "code",
@@ -31,13 +31,13 @@
    ],
    "id": "e48faeb2fb2c894f",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T04:10:34.973171Z",
-     "start_time": "2025-06-24T04:10:34.967218Z"
+     "end_time": "2025-06-24T06:04:47.544787Z",
+     "start_time": "2025-06-24T06:04:46.934764Z"
     }
    },
    "cell_type": "code",
@@ -50,7 +50,7 @@
    ],
    "id": "d5b501c6b333e689",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -65,8 +65,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T04:10:34.997086Z",
-     "start_time": "2025-06-24T04:10:34.986986Z"
+     "end_time": "2025-06-24T06:04:48.060316Z",
+     "start_time": "2025-06-24T06:04:48.049678Z"
     }
    },
    "cell_type": "code",
@@ -87,7 +87,7 @@
    ],
    "id": "f0ef3c7a4294213a",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -98,8 +98,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T04:10:35.015763Z",
-     "start_time": "2025-06-24T04:10:35.009860Z"
+     "end_time": "2025-06-24T06:04:48.089751Z",
+     "start_time": "2025-06-24T06:04:48.082914Z"
     }
    },
    "cell_type": "code",
@@ -110,7 +110,7 @@
    ],
    "id": "7e666a7ddf985cb6",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -121,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T04:10:35.030446Z",
-     "start_time": "2025-06-24T04:10:35.021701Z"
+     "end_time": "2025-06-24T06:04:48.283252Z",
+     "start_time": "2025-06-24T06:04:48.270354Z"
     }
    },
    "cell_type": "code",
@@ -160,33 +160,33 @@
      "text": [
       "\n",
       "Nodes:\n",
-      "Node ID: 33, Coordinates: (0.0, 0)\n",
-      "Node ID: 34, Coordinates: (9.999999999999999e-06, 0)\n",
-      "Node ID: 35, Coordinates: (1.9999999999999998e-05, 0)\n",
-      "Node ID: 36, Coordinates: (2.9999999999999997e-05, 0)\n",
-      "Node ID: 37, Coordinates: (3.9999999999999996e-05, 0)\n",
-      "Node ID: 38, Coordinates: (4.9999999999999996e-05, 0)\n",
-      "Node ID: 39, Coordinates: (5.9999999999999995e-05, 0)\n",
-      "Node ID: 40, Coordinates: (7e-05, 0)\n",
-      "Node ID: 41, Coordinates: (7.999999999999999e-05, 0)\n",
-      "Node ID: 42, Coordinates: (8.999999999999999e-05, 0)\n",
-      "Node ID: 43, Coordinates: (9.999999999999999e-05, 0)\n",
+      "Node ID: 0, Coordinates: (0.0, 0)\n",
+      "Node ID: 1, Coordinates: (9.999999999999999e-06, 0)\n",
+      "Node ID: 2, Coordinates: (1.9999999999999998e-05, 0)\n",
+      "Node ID: 3, Coordinates: (2.9999999999999997e-05, 0)\n",
+      "Node ID: 4, Coordinates: (3.9999999999999996e-05, 0)\n",
+      "Node ID: 5, Coordinates: (4.9999999999999996e-05, 0)\n",
+      "Node ID: 6, Coordinates: (5.9999999999999995e-05, 0)\n",
+      "Node ID: 7, Coordinates: (7e-05, 0)\n",
+      "Node ID: 8, Coordinates: (7.999999999999999e-05, 0)\n",
+      "Node ID: 9, Coordinates: (8.999999999999999e-05, 0)\n",
+      "Node ID: 10, Coordinates: (9.999999999999999e-05, 0)\n",
       "\n",
       "Elements:\n",
-      "Element from Node 33 to Node 34, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 34 to Node 35, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 35 to Node 36, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 36 to Node 37, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 37 to Node 38, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 38 to Node 39, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 39 to Node 40, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 40 to Node 41, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 41 to Node 42, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 42 to Node 43, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n"
+      "Element from Node 0 to Node 1, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 1 to Node 2, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 2 to Node 3, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 3 to Node 4, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 4 to Node 5, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 5 to Node 6, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 6 to Node 7, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 7 to Node 8, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 8 to Node 9, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "Element from Node 9 to Node 10, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -195,10 +195,13 @@
    "id": "97f60ffe647c5310"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-24T06:04:48.425553Z",
+     "start_time": "2025-06-24T06:04:48.414948Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "def assemble_K():\n",
     "    pass\n",
@@ -206,7 +209,9 @@
     "def assemble_M():\n",
     "    pass"
    ],
-   "id": "158c701fb91be890"
+   "id": "158c701fb91be890",
+   "outputs": [],
+   "execution_count": 6
   }
  ],
  "metadata": {
