added an ID bookkeeping mixin class to simplify ID setting and enable using the utility functions for truss and beam members

--- a/source/notebooks/example_4_2.ipynb
+++ b/source/notebooks/example_4_2.ipynb
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:04.586646Z",
-     "start_time": "2025-06-24T09:32:04.482915Z"
+     "end_time": "2025-06-24T12:13:07.814083Z",
+     "start_time": "2025-06-24T12:13:07.721398Z"
     }
    },
    "cell_type": "code",
@@ -46,13 +46,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:04.607382Z",
-     "start_time": "2025-06-24T09:32:04.598567Z"
+     "end_time": "2025-06-24T12:13:08.074676Z",
+     "start_time": "2025-06-24T12:13:08.068190Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "dimensionality = 3 # Set to 3 for a 3D truss, 2 for a 2D truss\n",
+    "dimensionality = 2 # Set to 3 for a 3D truss, 2 for a 2D truss\n",
     "\n",
     "if dimensionality == 3:\n",
     "    # 3D nodes\n",
@@ -85,24 +85,26 @@
     "\n",
     "- Nodes: simply listed as a tuple of Node objects defined earlier.\n",
     "- Elements: nodes are provided by ID, the rest is area, material properties.\n",
-    "- Supports: defined by node ID and direction, where 'x', 'y', 'z' are the directions. **The correctness of the support input is not checked; if you encounter a singular stiffness matrix, check the inputs first.**"
+    "- Supports: defined by node ID and the local dof numbers are the directions. **The correctness of the support input is not checked; if you encounter a singular stiffness matrix, check the inputs first.**"
    ],
    "id": "fe92adbc8aa6535f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:04.630515Z",
-     "start_time": "2025-06-24T09:32:04.622354Z"
+     "end_time": "2025-06-24T12:13:08.107674Z",
+     "start_time": "2025-06-24T12:13:08.100017Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# model\n",
     "\n",
-    "supports_=((0, 'x'), (0, 'y'), (2, 'x'),)\n",
+    "supports_={0: (0, 1), 2: (0,)}\n",
     "if dimensionality == 3:\n",
-    "    supports_ += ((0, 'z'), (1, 'z'), (2, 'z'))\n",
+    "    supports_[0] += (2,)  # Node 0 is fixed in all three directions\n",
+    "    supports_[1] = (2,)   # Node 2 is fixed in the z-direction\n",
+    "    supports_[2] += (2,)   # Node 2 is fixed in the z-direction\n",
     "\n",
     "model = TrussModel(\n",
     "    nodes_=(n1, n2, n3),\n",
@@ -124,7 +126,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The model has 3 degrees of freedom per node.\n"
+      "The model has 2 degrees of freedom per node.\n"
      ]
     }
    ],
@@ -143,8 +145,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:05.048091Z",
-     "start_time": "2025-06-24T09:32:05.041340Z"
+     "end_time": "2025-06-24T12:13:08.127841Z",
+     "start_time": "2025-06-24T12:13:08.122226Z"
     }
    },
    "cell_type": "code",
@@ -158,9 +160,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Node 0: coords:[0 0 0]\n",
-      "Node 1: coords:[1 0 0]\n",
-      "Node 2: coords:[0 1 0]\n"
+      "Node 0: coords:[0 0]\n",
+      "Node 1: coords:[1 0]\n",
+      "Node 2: coords:[0 1]\n"
      ]
     }
    ],
@@ -179,8 +181,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:05.196113Z",
-     "start_time": "2025-06-24T09:32:05.185897Z"
+     "end_time": "2025-06-24T12:13:08.181500Z",
+     "start_time": "2025-06-24T12:13:08.173530Z"
     }
    },
    "cell_type": "code",
@@ -200,9 +202,9 @@
       "Element 0: Ae=0.1, le=1.00, E=7e+10\n",
       "Element 1: Ae=0.1, le=1.00, E=7e+10\n",
       "Element 2: Ae=0.1, le=1.41, E=7e+10\n",
-      "Element 0: node i=[0 0 0], node j=[1 0 0], direction=[1 0 0]\n",
-      "Element 1: node i=[0 0 0], node j=[0 1 0], direction=[0 1 0]\n",
-      "Element 2: node i=[1 0 0], node j=[0 1 0], direction=[-1  1  0]\n"
+      "Element 0: node i=[0 0], node j=[1 0], direction=[1 0]\n",
+      "Element 1: node i=[0 0], node j=[0 1], direction=[0 1]\n",
+      "Element 2: node i=[1 0], node j=[0 1], direction=[-1  1]\n"
      ]
     }
    ],
@@ -220,8 +222,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:05.335705Z",
-     "start_time": "2025-06-24T09:32:05.325365Z"
+     "end_time": "2025-06-24T12:13:08.249440Z",
+     "start_time": "2025-06-24T12:13:08.242822Z"
     }
    },
    "cell_type": "code",
@@ -243,12 +245,10 @@
       " [-7.e+09  7.e+09]]\n",
       "\n",
       "Element 0 stiffness matrix in the global coordinate system:\n",
-      "[[ 7.e+09  0.e+00  0.e+00 -7.e+09  0.e+00  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [-7.e+09  0.e+00  0.e+00  7.e+09  0.e+00  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]]\n",
+      "[[ 7.e+09  0.e+00 -7.e+09  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [-7.e+09  0.e+00  7.e+09  0.e+00]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00]]\n",
       "\n",
       "\n",
       "Element 1 stiffness matrix in the element local coordinate system:\n",
@@ -256,12 +256,10 @@
       " [-7.e+09  7.e+09]]\n",
       "\n",
       "Element 1 stiffness matrix in the global coordinate system:\n",
-      "[[ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [ 0.e+00  7.e+09  0.e+00  0.e+00 -7.e+09  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]\n",
-      " [ 0.e+00 -7.e+09  0.e+00  0.e+00  7.e+09  0.e+00]\n",
-      " [ 0.e+00  0.e+00  0.e+00  0.e+00  0.e+00  0.e+00]]\n",
+      "[[ 0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [ 0.e+00  7.e+09  0.e+00 -7.e+09]\n",
+      " [ 0.e+00  0.e+00  0.e+00  0.e+00]\n",
+      " [ 0.e+00 -7.e+09  0.e+00  7.e+09]]\n",
       "\n",
       "\n",
       "Element 2 stiffness matrix in the element local coordinate system:\n",
@@ -269,12 +267,10 @@
       " [-4.95e+09  4.95e+09]]\n",
       "\n",
       "Element 2 stiffness matrix in the global coordinate system:\n",
-      "[[ 2.475e+09 -2.475e+09  0.000e+00 -2.475e+09  2.475e+09  0.000e+00]\n",
-      " [-2.475e+09  2.475e+09  0.000e+00  2.475e+09 -2.475e+09  0.000e+00]\n",
-      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]\n",
-      " [-2.475e+09  2.475e+09  0.000e+00  2.475e+09 -2.475e+09  0.000e+00]\n",
-      " [ 2.475e+09 -2.475e+09  0.000e+00 -2.475e+09  2.475e+09  0.000e+00]\n",
-      " [ 0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00  0.000e+00]]\n",
+      "[[ 2.475e+09 -2.475e+09 -2.475e+09  2.475e+09]\n",
+      " [-2.475e+09  2.475e+09  2.475e+09 -2.475e+09]\n",
+      " [-2.475e+09  2.475e+09  2.475e+09 -2.475e+09]\n",
+      " [ 2.475e+09 -2.475e+09 -2.475e+09  2.475e+09]]\n",
       "\n"
      ]
     }
@@ -296,8 +292,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:05.408250Z",
-     "start_time": "2025-06-24T09:32:05.394465Z"
+     "end_time": "2025-06-24T12:13:08.292457Z",
+     "start_time": "2025-06-24T12:13:08.284463Z"
     }
    },
    "cell_type": "code",
@@ -320,47 +316,23 @@
      "output_type": "stream",
      "text": [
       "Global stiffness matrix without supports:\n",
-      "[[ 7.00e+09  0.00e+00  0.00e+00 -7.00e+09  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  7.00e+09  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "  -7.00e+09  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [-7.00e+09  0.00e+00  0.00e+00  9.47e+09 -2.47e+09  0.00e+00 -2.47e+09\n",
-      "   2.47e+09  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00  2.47e+09\n",
-      "  -2.47e+09  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00  2.47e+09\n",
-      "  -2.47e+09  0.00e+00]\n",
-      " [ 0.00e+00 -7.00e+09  0.00e+00  2.47e+09 -2.47e+09  0.00e+00 -2.47e+09\n",
-      "   9.47e+09  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  0.00e+00]]\n",
+      "[[ 7.00e+09  0.00e+00 -7.00e+09  0.00e+00  0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  7.00e+09  0.00e+00  0.00e+00  0.00e+00 -7.00e+09]\n",
+      " [-7.00e+09  0.00e+00  9.47e+09 -2.47e+09 -2.47e+09  2.47e+09]\n",
+      " [ 0.00e+00  0.00e+00 -2.47e+09  2.47e+09  2.47e+09 -2.47e+09]\n",
+      " [ 0.00e+00  0.00e+00 -2.47e+09  2.47e+09  2.47e+09 -2.47e+09]\n",
+      " [ 0.00e+00 -7.00e+09  2.47e+09 -2.47e+09 -2.47e+09  9.47e+09]]\n",
       "\n",
       "Global stiffness matrix with supports:\n",
-      "[[ 1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  9.47e+09 -2.47e+09  0.00e+00  0.00e+00\n",
-      "   2.47e+09  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00  0.00e+00\n",
-      "  -2.47e+09  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  1.00e+20  0.00e+00\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  1.00e+20\n",
-      "   0.00e+00  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  2.47e+09 -2.47e+09  0.00e+00  0.00e+00\n",
-      "   9.47e+09  0.00e+00]\n",
-      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00\n",
-      "   0.00e+00  1.00e+20]]\n",
+      "[[ 1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  1.00e+20  0.00e+00  0.00e+00  0.00e+00  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  9.47e+09 -2.47e+09  0.00e+00  2.47e+09]\n",
+      " [ 0.00e+00  0.00e+00 -2.47e+09  2.47e+09  0.00e+00 -2.47e+09]\n",
+      " [ 0.00e+00  0.00e+00  0.00e+00  0.00e+00  1.00e+20  0.00e+00]\n",
+      " [ 0.00e+00  0.00e+00  2.47e+09 -2.47e+09  0.00e+00  9.47e+09]]\n",
       "\n",
       "Global force vector with supports:\n",
-      "[    0.     0.     0.     0. -1000.     0.     0.     0.     0.]\n"
+      "[    0.     0.     0. -1000.     0.     0.]\n"
      ]
     }
    ],
@@ -375,8 +347,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:05.483129Z",
-     "start_time": "2025-06-24T09:32:05.469455Z"
+     "end_time": "2025-06-24T12:13:08.343894Z",
+     "start_time": "2025-06-24T12:13:08.332084Z"
     }
    },
    "cell_type": "code",
@@ -414,9 +386,9 @@
      "text": [
       "\n",
       "Global displacements:\n",
-      "Node 0: u=0.0, v=0.0, w=0.0\n",
-      "Node 1: u=-1.4285714285714285e-07, v=-6.897753035351702e-07, w=0.0\n",
-      "Node 2: u=0.0, v=-1.4285714285714285e-07, w=0.0\n",
+      "Node 0: u=0.0, v=0.0\n",
+      "Node 1: u=-1.4285714285714285e-07, v=-6.897753035351702e-07\n",
+      "Node 2: u=0.0, v=-1.4285714285714285e-07\n",
       "\n",
       "Member forces:\n",
       "Element 0: force=-1000.00 N, (compression)\n",
@@ -428,11 +400,8 @@
       "DOF 1: 1000.00 N\n",
       "DOF 2: 0.00 N\n",
       "DOF 3: 0.00 N\n",
-      "DOF 4: -0.00 N\n",
-      "DOF 5: 0.00 N\n",
-      "DOF 6: -1000.00 N\n",
-      "DOF 7: 0.00 N\n",
-      "DOF 8: 0.00 N\n"
+      "DOF 4: -1000.00 N\n",
+      "DOF 5: 0.00 N\n"
      ]
     }
    ],
@@ -447,8 +416,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T09:32:15.277618Z",
-     "start_time": "2025-06-24T09:32:15.230769Z"
+     "end_time": "2025-06-24T12:13:08.974926Z",
+     "start_time": "2025-06-24T12:13:08.384084Z"
     }
    },
    "cell_type": "code",
@@ -474,14 +443,14 @@
        "<IPython.core.display.HTML object>"
       ],
       "text/html": [
-       "<div id='b9b8f5c7-e25c-47b3-bd81-79a69705ea46'></div>"
+       "<div id='af1f5306-8405-4afe-8803-443319f189cb'></div>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   }
  ],
  "metadata": {
