fixing ID bookkeeping

--- a/source/notebooks/case_study_5_5.ipynb
+++ b/source/notebooks/case_study_5_5.ipynb
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T06:04:46.919136Z",
-     "start_time": "2025-06-24T06:04:46.902399Z"
+     "end_time": "2025-06-24T12:11:02.230106Z",
+     "start_time": "2025-06-24T12:11:02.206919Z"
     }
    },
    "cell_type": "code",
@@ -26,8 +26,11 @@
     "# number of elements to be used. The book uses 10.\n",
     "NE = 10  # number of elements\n",
     "\n",
+    "# number of degrees of freedom each node\n",
+    "ND = 2  # 2D problem, so only X and Y coordinates are used\n",
+    "\n",
     "# number of degrees of freedom per element. This is not to be changed.\n",
-    "DOF = 4  # u_x, u_y, u_z, θ_y, θ_z"
+    "DOF = 4  # u_x, u_y, u_z, θ_y, θ_z\n"
    ],
    "id": "e48faeb2fb2c894f",
    "outputs": [],
@@ -36,8 +39,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T06:04:47.544787Z",
-     "start_time": "2025-06-24T06:04:46.934764Z"
+     "end_time": "2025-06-24T12:11:04.079123Z",
+     "start_time": "2025-06-24T12:11:02.230106Z"
     }
    },
    "cell_type": "code",
@@ -65,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T06:04:48.060316Z",
-     "start_time": "2025-06-24T06:04:48.049678Z"
+     "end_time": "2025-06-24T12:11:05.092739Z",
+     "start_time": "2025-06-24T12:11:05.074547Z"
     }
    },
    "cell_type": "code",
@@ -98,8 +101,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T06:04:48.089751Z",
-     "start_time": "2025-06-24T06:04:48.082914Z"
+     "end_time": "2025-06-24T12:11:05.140600Z",
+     "start_time": "2025-06-24T12:11:05.125820Z"
     }
    },
    "cell_type": "code",
@@ -121,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T06:04:48.283252Z",
-     "start_time": "2025-06-24T06:04:48.270354Z"
+     "end_time": "2025-06-24T12:11:05.197150Z",
+     "start_time": "2025-06-24T12:11:05.170833Z"
     }
    },
    "cell_type": "code",
@@ -149,8 +152,15 @@
     "for elem in elements:\n",
     "    print(f\"Element from Node {elem.i.ID} to Node {elem.j.ID}, Area: {elem.A}, Iy: {elem.I}, E: {elem.E}, ro: {elem.ro}\")\n",
     "\n",
-    "# supports are at both ends. The global DOFs are the first 4 and the last 4. There are NE+1 nodes.\n",
-    "supported_dofs = np.concatenate((np.arange(0, 4), np.arange(NE * DOF, (NE + 1) * DOF)))\n"
+    "# Convert nodes and elements to dictionaries for easy access.\n",
+    "# This is required for the assembly functions later.\n",
+    "nodes = {n.ID: n for n in nodes}\n",
+    "elements = {e.ID: e for e in elements}\n",
+    "\n",
+    "# clamped supports are at both ends.\n",
+    "supports = (0, (0, 1),  # (node ID, (dof1, dof2))\n",
+    "                  NE, (0, 1))  # (node ID, (dof1, dof2))\n",
+    "print(supports)\n"
    ],
    "id": "d259b8dac9d6023a",
    "outputs": [
@@ -182,11 +192,45 @@
       "Element from Node 6 to Node 7, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
       "Element from Node 7 to Node 8, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
       "Element from Node 8 to Node 9, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
-      "Element from Node 9 to Node 10, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n"
+      "Element from Node 9 to Node 10, Area: 1e-11, Iy: 2.083333333333333e-25, E: 169000000000.0, ro: 2300.0\n",
+      "(0, (0, 1), 10, (0, 1))\n"
      ]
     }
    ],
    "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Global force vector",
+   "id": "af608100e07810a6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-24T12:11:05.264525Z",
+     "start_time": "2025-06-24T12:11:05.247228Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "F = np.zeros(ND * len(nodes))  # Global force vector, initialized to zero\n",
+    "F[ND * (NE // 2)] = -1e-3  # Apply a force of -1 mN in the y-direction at the middle node\n",
+    "print(F)\n",
+    "print([x for x in F if x != 0])  # Print only non-zero entries"
+   ],
+   "id": "54ef0525e8c893bd",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. ... 0. 0. 0.]\n",
+      "[np.float64(-0.001)]\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -197,21 +241,36 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-06-24T06:04:48.425553Z",
-     "start_time": "2025-06-24T06:04:48.414948Z"
+     "end_time": "2025-06-24T12:11:07.868666Z",
+     "start_time": "2025-06-24T12:11:05.344536Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "def assemble_K():\n",
-    "    pass\n",
+    "from source.utils import assemble_global_K, apply_boundary_conditions\n",
+    "\n",
+    "K_global = assemble_global_K(ND=ND, nodes=nodes, elements=elements)\n",
+    "K_global, F = apply_boundary_conditions(ND=ND, supports=supports, K=K_global, F=F)\n",
     "\n",
     "def assemble_M():\n",
     "    pass"
    ],
    "id": "158c701fb91be890",
-   "outputs": [],
-   "execution_count": 6
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BeamElement' object has no attribute 'dof_indices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mAttributeError\u001B[39m                            Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[7]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01msource\u001B[39;00m\u001B[34;01m.\u001B[39;00m\u001B[34;01mutils\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m assemble_global_K, apply_boundary_conditions\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m K_global = \u001B[43massemble_global_K\u001B[49m\u001B[43m(\u001B[49m\u001B[43mND\u001B[49m\u001B[43m=\u001B[49m\u001B[43mND\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnodes\u001B[49m\u001B[43m=\u001B[49m\u001B[43mnodes\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43melements\u001B[49m\u001B[43m=\u001B[49m\u001B[43melements\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m      4\u001B[39m K_global, F = apply_boundary_conditions(ND=ND, supports=supports, K=K_global, F=F)\n\u001B[32m      6\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34massemble_M\u001B[39m():\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\modules\\FEM_Practical_Course\\source\\utils.py:60\u001B[39m, in \u001B[36massemble_global_K\u001B[39m\u001B[34m(ND, nodes, elements)\u001B[39m\n\u001B[32m     57\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m _id, element \u001B[38;5;129;01min\u001B[39;00m elements.items():\n\u001B[32m     58\u001B[39m     K_element = element.Ke  \u001B[38;5;66;03m# Global stiffness matrix for the element\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m60\u001B[39m     dof_indices = \u001B[43melement\u001B[49m\u001B[43m.\u001B[49m\u001B[43mdof_indices\u001B[49m  \u001B[38;5;66;03m# Use the pre-set DOF indices for the element\u001B[39;00m\n\u001B[32m     61\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     62\u001B[39m         \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[32m2\u001B[39m * ND):\n\u001B[32m     63\u001B[39m             \u001B[38;5;66;03m# add the i,j element of the local stiffness matrix to the element of the global stiffness matrix defined by the global dof indices.\u001B[39;00m\n",
+      "\u001B[31mAttributeError\u001B[39m: 'BeamElement' object has no attribute 'dof_indices'"
+     ]
+    }
+   ],
+   "execution_count": 7
   }
  ],
  "metadata": {
